# OptSQL

./: .gitignore  LICENSE  README.md  RESULTS_zh.md  pyproject.toml  requirements.txt
app/: __init__.py  progress.py
app/config/: __init__.py  config.py
app/dataset/: __init__.py  artifacts.py  dataset.py  spider2_dataset.py  utils.py
app/db_utils/: __init__.py  cloud_execution.py  cloud_schema.py  constants.py  defaults.py  execution.py  schema.py
app/few_shot/: __init__.py  examples.py  index_builder.py  masker.py  preliminary_sql.py  retriever.py  runtime.py  train_loader.py
app/llm/: __init__.py  llm.py
app/llm_extractor/: __init__.py  extractor.py
app/logger/: __init__.py  logger.py
app/pipeline/: __init__.py  utils.py  validation.py
app/prompt/: __init__.py  factory.py  prompt_template.py  (+1 more)
integration/: __init__.py  evaluate_controller_metrics.py  optsql_bridge.py  run_optsql_bridge_batch.py
runner/: benchmark_execution.py  build_few_shot_index.py  convert_snapshot_to_sql.py  create_vector_db_parallel.py  evaluation.py  inspect_few_shot_preparation.py  preprocess_dail_few_shots.py  preprocess_dataset.py  query_few_shot_index.py  run_few_shot_preparation.py  run_schema_linking.py  run_sql_generation.py  run_sql_revision.py  run_sql_selection.py  run_value_retrieval.py
script/: download_dataset.sh  run-command-utils.sh  run_bird.sh  run_bird_test.sh  run_pipeline.sh  run_spider.sh  run_spider2.sh
scripts/: prepare_bird_input.py  prepare_bird_train.ps1  reset_few_shot_items.py  run_full_sequence.ps1  run_full_stage.ps1  validate_predictions.py
(+45 files in other folders)
