[project]
name = "optsql-repro"
version = "0.1.0"
description = "Reproducible OptSQL pipeline for BIRD with Qwen3-Coder-Plus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "chromadb>=1.0.21",
    "db-dtypes>=1.5.0",
    "gdown>=5.2.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-bigquery-storage>=2.36.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "modelscope>=1.29.2",
    "nvitop>=1.6.1",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "pyarrow>=23.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "snowflake-connector-python>=4.2.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
]
