[project]
name = "optsql-repro"
version = "0.1.0"
description = "Reproducible OptSQL pipeline for BIRD with Qwen3-Coder-Plus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "chromadb>=1.0.21",
    "langgraph>=1.0.0",
    "loguru>=0.7.3",
    "modelscope>=1.29.2",
    "numpy>=2.0.0",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.0",
    "sentence-transformers>=5.1.0",
    "sqlglot>=30.0.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.0",
]
